[package]
name = "secret_pics"
version = "0.1.0"
edition = "2021"
author = "mushroom <mushroom020@proton.me>"
about="It's a simple app to encode and decode secret messages from the png file"  

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
anyhow = "1.0.69"
